--- a/SpointLiteVersion/Views/NCFs/Create.cshtml
+++ b/SpointLiteVersion/Views/NCFs/Create.cshtml
@@ -84,7 +84,7 @@
 
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" id="btnsubmit" class="btn btn-primary">Save changes</button>
+            <button type="button" id="btnsubmit1" class="btn btn-primary">Save changes</button>
         </div>
 
     </div>
@@ -115,7 +115,7 @@
 
           
 
-            $("#btnsubmit").click(function () {
+            $("#btnsubmit1").click(function () {
                 document.getElementById("pruebancf").value = $("#descripcion").val();
                 document.getElementById("idncfenviar").value = $("#idncf").val();
                 document.getElementById("descripcionncf").value = $("#descripcionenviar").val();
